--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "xlsx": "^0.16.9"
   },
   "scripts": {
-    "start": "serve -s build && node server.js",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
